# MyCalender

./: CMakeLists.txt  README.md  main.cpp
calender_dialog/: calender_dialog.cpp  calender_dialog.h  calender_dialog.ui
login_dialog/: login_dialog.cpp  login_dialog.h  login_dialog.ui  user.h
main_window/: main_window.cpp  main_window.h  main_window.ui
reminder_dialog/: reminder.h  reminder_dialog.cpp  reminder_dialog.h  reminder_dialog.ui
resource/: resource.qrc
weather/: qcompressor.cpp  qcompressor.h  weather.cpp  weather.h
